Adding cuota to tyc

--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 
               <div class="row mt-1">
                 <div class="col-md-8">
-                  <label class="control control--checkbox mb-0"><span class="caption">Rellenando y enviando este formulario estoy de acuerdo en que se me cargue en esta la cuota anual y formar parte de esta Asociación durante el curso 2023/2024 y los sucesivos.</span>
-                  <input type="checkbox" checked="checked"/>
+                  <label class="tyc control control--checkbox mb-0"><span class="caption">Rellenando y enviando este formulario estoy de acuerdo en que se me cargue en esta la cuota anual de <strong>50€</strong> y formar parte de esta Asociación durante el curso 2023/2024 y los sucesivos.</span>
+                  <input type="checkbox" required checked="checked"/>
                   <div class="control__indicator"></div>
                 </label>
               </div>
