Update index.html with disclaimer 2015

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             "><img src="images/logo.png" height="150"></div>
             <h1>Inscripción de nuevos asociados</h1>
             <p class="mb-4">Bienvenidos a la Asociación de Madres y Padres de Alumnos del Colegio Sagrada Familia de Jorge Juan de Madrid. Rellena los siguientes datos para que podamos registrar a tu familia como miembro de la asociación. </p>
+            <p class="mb-4" style="
+    border: black solid 2px;
+    background: #fff;
+    padding: 1em;
+">Los datos proporcionados en este formulario se incorporarán a nuestra base de datos y se utilizarán para cargar en la cuenta bancaria los recibos correspondientes a la cuota de socio para el próximo curso y siguientes. Si desea formar parte de la asociación ya durante este curso 2024/2025 deberá hacer una  transferencia por el importe de la cuota (50,00€ familias con un único alumno y 65€ familias con 2 o más) a nombre de la Asociación en el número de cuenta ES4700750103090600955538, indicando en CONCEPTO el nombre de su(s) hijo(s) y hacernos llegar el justificante al  correo electrónico asociados@ampasafajorgejuan.es</p>
             <form class="needs-validation" novalidate>
               <div class="row justify-content-start">
                 <div class="col-md-auto">
